<resources>
    <string name="app_name">emkn</string>
    <string name="sign_up_button_text">Регистрация</string>
    <string name="sign_up_tab_text">Регистрация</string>
    <string name="sign_in_button_text">Вход</string>
    <string name="sign_in_email_text_layout_hint">Логин</string>
    <string name="sign_in_password_text_layout_hint">Пароль</string>
    <string name="sign_up_firstname_text_layout_hint">Имя</string>
    <string name="sign_up_lastname_text_layout_hint">Фамилия</string>
    <string name="sign_up_login_text_layout_hint">Логин</string>
    <string name="sign_up_email_text_layout_hint">Email</string>
    <string name="forgot_password_hint">Email</string>
    <string name="email_confirmation_header">Введите код подтверждения, отправленный на почту</string>
    <string name="submit_code">Отправить код</string>
    <string name="send_code_again">Получить код повторно</string>
    <string name="send_code_again_in">Получить код повторно можно будет через: %d</string>
    <string name="forgot_password_button_text">Забыли пароль?</string>
    <string name="email_confirmation_head_text">Подтверждение почты</string>
    <string name="forgot_password_head_text">Восстановление пароля</string>
    <string name="forgot_password_header">Вам на почту будет отправлен код подтверждения</string>
    <string name="get_code__button_text">Получить код</string>
    <string name="emkn_logo">emkn</string>
    <string name="change_password_confirmation_header">Восстановление пароля</string>
    <string name="commit_change_password_description">Введите новый пароль</string>
    <string name="commit_change_password_submit_button">Изменить пароль</string>
    <string name="commit_change_password_hint_text">Пароль</string>
    <string name="sign_in_back_alert_dialog_text">Введенные данные не сохранятся. Вы уверены?</string>
    <string name="sign_in_back_alert_dialog_cancel_button_text">Отмена</string>
    <string name="sign_in_back_alert_dialog_ok_button_text">Ок</string>
    <string name="confirmation_back_alert_dialog_text">Код придётся вводить заново. Вы уверены?</string>
    <string name="incorrect_login_or_password_error">Некорректный логин или пароль</string>
    <string name="incorrect_email_error">Некорректная почта</string>
    <string name="bad_network_error">Нет доступа к сети</string>
    <string name="incorrect_login_error">Некорректный логин</string>
    <string name="incorrect_password_error">Некорректный пароль</string>
    <string name="login_not_available_error">Логин уже занят</string>
    <string name="email_not_available_error">Email уже занят</string>
    <string name="code_expire_error">Срок действия кода истек</string>
    <string name="code_invalid_error">Неверный код</string>
    <string name="enroll_button">Записаться</string>
    <string name="unenroll_button">Отписаться</string>
    <string name="courses_title">курсы</string>
    <string name="exclude_enroll_courses">исключить пройденные курсы</string>
    <string name="exclude_unenrolled_courses">исключить непройденные курсы</string>
    <string name="profile_title">профиль</string>
    <string name="settings_title">настройки</string>
    <string name="upload_photo_title">Загрузить новую фотографию</string>
    <string name="course_homeworks_title">домашние задания</string>
</resources>