<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirmation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/emkn_logo_top_margin"
        android:font="@font/inter"
        android:gravity="center"
        android:lineHeight="77dp"
        android:text="@string/emkn_logo"
        android:textColor="@color/confirm_50"
        android:textSize="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirmation_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/auth_screen_horizontal_margin"
        android:layout_marginTop="54dp"
        android:text="@string/email_confirmation_head_text"
        android:textColor="@color/text"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmation_title" />

    <View
        android:id="@+id/confirmation_header_underline"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="6dp"
        android:background="@color/accent"
        app:layout_constraintEnd_toEndOf="@id/confirmation_header"
        app:layout_constraintStart_toStartOf="@id/confirmation_header"
        app:layout_constraintTop_toBottomOf="@id/confirmation_header" />

    <TextView
        android:id="@+id/confirmation_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:gravity="start"
        android:paddingHorizontal="@dimen/auth_screen_horizontal_margin"
        android:text="@string/email_confirmation_header"
        android:textColor="@color/confirm"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmation_header_underline" />

    <com.mcs.emkn.ui.emailconfirmation.VerificationCodeEditText
        android:id="@+id/codeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmation_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendCodeButton"
        style="@style/ConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/submit_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/codeEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendCodeAgainButton"
        style="@style/DeclineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/send_code_again"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendCodeButton" />

    <TextView
        android:id="@+id/timerTextVIew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="start"
        android:paddingHorizontal="@dimen/auth_screen_horizontal_margin"
        android:text="@string/send_code_again_in"
        android:textColor="@color/text_50"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendCodeButton" />


</androidx.constraintlayout.widget.ConstraintLayout>